--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -7,38 +7,37 @@
     tools:context=".presentation.current_temperature.MainActivity">
 
     <TextView
+        android:id="@+id/tv_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/_10dp"
+        android:text="Day"
+        android:padding="@dimen/_10dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <TextView
         android:id="@+id/tv_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tv_day"
+        android:layout_marginEnd="@dimen/_10dp"
+        android:text="Temperature"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="@dimen/_10dp"
-        android:text="20 C"
-        android:textStyle="bold"
-        android:textSize="100sp"
-        android:textColor="@color/black"/>
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tv_city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_temperature"
-        android:padding="@dimen/_10dp"
-        android:text="Bengalore"
-        android:textStyle="normal"
-        android:textSize="50sp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_forecast"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_10dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_city"/>
-
-
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_temperature"
+        android:layout_marginTop="@dimen/_10dp"
+        android:layout_marginBottom="@dimen/_10dp"
+        android:background="@color/color_view_background"
+        />
 
 
 
